<resources>

    <!-- APP NAME -->
    <string name="app_name">Blitzmade</string>
    <string name="app_slogan">Blitzmade. One topic, one moment, the whole world.</string>
    <!--*****************************************************************************-->

    <!-- LOG IN -->
    <string name="SignUp_fromLogin_button">Don\'t have an account ? Sign up</string>
    <string name="usernameHint_login">Username</string>
    <string name="passwordHint_login">Password</string>
    <string name="forgotLoginDetails_login">Forgot your login details ?</string>
    <string name="log_in_home_button">Log in</string>
    <!--*****************************************************************************-->

    <!-- SIGN UP -->
    <string name="LogIn_fromSignup_button">Already have an account ? Log in</string>
    <string name="usernameHint_signup">Username</string>
    <string name="passwordHint_signup">Password</string>
    <string name="passwordAgainHint_signup">Password again</string>
    <string name="emailHint_signup">E-mail</string>
    <string name="register_home_button">Register</string>
    <!--*****************************************************************************-->

    <!-- BLITZONE -->
    <string name="blitzone_toolbar_title">Blitzmade</string>
    <string name="name_blitzone_row_content">mikelv92</string>
    <string name="points_blitzone_row_content">117</string>
    <string name="name_blitzone_view_content">mikelv92</string>
    <string name="points_blitzone_view_content">117</string>
    <string name="chapter_blitzone_view_content">ABC</string>
    <string name="timePublished_blitzone_view_content">6 minutes ago</string>
    <string name="noRecords_daily_tab_content">No Records</string>
    <!--*****************************************************************************-->

    <!-- PROFILE -->
    <string name="toolbar_title_profile"> </string>
    <string name="points_profile">"115"</string>
    <string name="likes_profile">353</string>
    <string name="dislikes_profile">100</string>
    <string name="followers_profile">1k</string>
    <string name="textBelow_hlv">Test</string>
    <string name="dayChapter_profile">Travel friend</string>
    <!--*****************************************************************************-->

    <!-- NOTIFICATIONS -->
    <string name="toolbar_title_notifications">Notifications</string>
    <!--*****************************************************************************-->

    <!-- SEARCH -->
    <string name="toolbar_title_search">Search</string>
    <string name="searchHint_search">Search</string>
    <!--*****************************************************************************-->

    <!-- OPTIONS -->
    <string name="toolbar_title_options">Options</string>
    <string name="row_text_options">text</string>
    <!--*****************************************************************************-->

</resources>
