<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:weightSum="1"
    android:theme="@style/AppTheme.NoActionBar">

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/LogIn_fromSignup_button"
        android:id="@+id/log_in_gray_button"
        android:background="@drawable/rectangular_filled_green_button"
        android:textColor="@color/white"
        android:onClick="loginButtonCallback"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/username_signup"
        android:hint="@string/usernameHint_signup"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/white"
        android:singleLine="true"
        android:layout_below="@+id/blitz_signup"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/password_signup"
        android:hint="@string/passwordHint_signup"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/username_signup"
        android:layout_alignLeft="@+id/username_signup"
        android:layout_alignStart="@+id/username_signup"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/password_again_signup"
        android:hint="@string/passwordAgainHint_signup"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/password_signup"
        android:layout_alignLeft="@+id/username_signup"
        android:layout_alignStart="@+id/username_signup"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/email"
        android:hint="@string/emailHint_signup"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/password_again_signup"
        android:layout_alignLeft="@+id/username_signup"
        android:layout_alignStart="@+id/username_signup"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textSize="15sp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/register_home_button"
        android:id="@+id/signup_home_button"
        android:background="@drawable/login_signup_button_selector"
        android:enabled="false"
        android:textColor="@color/white"
        android:onClick="signupHomeButtonCallback"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginTop="10dp"
        android:textSize="12sp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/blitz_signup"
        android:background="@mipmap/ic_blitz"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="30dp"
        android:background ="@xml/progress"
        android:layout_alignTop="@+id/signup_home_button"
        android:layout_alignRight="@+id/signup_home_button"
        android:layout_alignEnd="@+id/signup_home_button"
        android:visibility="gone"
        android:layout_marginTop="5dp"/>

</RelativeLayout>