<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp_fromLogin_button"
        android:id="@+id/sign_up_gray_button"
        android:textColor="@color/green"
        android:gravity="center"
        android:onClick="signupButtonCallback"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/forgotPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/usernameHint_login"
        android:id="@+id/username_login"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/green"
        app:met_textColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/usernameHint_login"
        app:met_iconLeft="@mipmap/ic_profile"
        app:met_iconPadding="0dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:singleLine="true"
        android:layout_below="@+id/blitz_login"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/passwordHint_login"
        android:id="@+id/password_login"
        android:inputType="textPassword"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/green"
        app:met_textColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/passwordHint_login"
        app:met_iconLeft="@mipmap/ic_password"
        app:met_iconPadding="0dp"
        android:layout_below="@+id/username_login"
        android:layout_alignLeft="@+id/username_login"
        android:layout_alignStart="@+id/username_login"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:singleLine="true"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/log_in_home_button"
        android:id="@+id/log_in_home_button"
        android:background="@drawable/login_signup_button_selector"
        android:enabled="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:onClick="loginHomeButtonCallback"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/blitz_login"
        android:background="@mipmap/ic_blitz"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotLoginDetails_login"
        android:id="@+id/forgotPasswordTextView"
        android:layout_below="@+id/log_in_home_button"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="30dp"
        android:visibility="gone"
        android:background ="@xml/progress"
        android:layout_alignTop="@+id/log_in_home_button"
        android:layout_alignRight="@+id/log_in_home_button"
        android:layout_alignEnd="@+id/log_in_home_button"
        android:layout_marginTop="5dp"/>

</RelativeLayout>
