<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_of_profile"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toolbar_title_profile"
        android:textSize="25sp"
        android:id="@+id/profile_toolbar_title"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/blitzone_from_profile"
        android:background="@mipmap/ic_blitz"
        android:onClick="blitzoneFromProfileButtonCallback"
        android:layout_alignBottom="@+id/toolbar_of_profile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="center"
        android:layout_margin="10dp"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/notifications_from_profile"
        android:background="@mipmap/ic_notification"
        android:onClick="notificationsFromProfileButtonCallback"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleType="center"
        android:layout_margin="10dp"/>

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/profile_picture"
        android:background="@drawable/rounded_lightgray_button"
        android:layout_below="@+id/notifications_from_profile"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@mipmap/ic_orange_blitz"
        android:id="@+id/blitz_won"
        android:layout_above="@+id/divider1"
        android:layout_alignLeft="@+id/followers"
        android:layout_alignStart="@+id/followers" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@mipmap/ic_orange_profile"
        android:id="@+id/followers"
        android:layout_alignTop="@+id/profile_picture"
        android:layout_alignLeft="@+id/blitzone_from_profile"
        android:layout_alignStart="@+id/blitzone_from_profile" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/points_profile"
        android:id="@+id/number_of_blitz"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_alignBottom="@+id/profile_picture"
        android:layout_alignLeft="@+id/number_of_followers"
        android:layout_alignStart="@+id/number_of_followers"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/followers_profile"
        android:id="@+id/number_of_followers"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_alignBottom="@+id/followers"
        android:layout_toRightOf="@+id/followers"
        android:layout_toEndOf="@+id/followers"
        android:layout_marginBottom="10dp"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@mipmap/ic_disconnect"
        android:id="@+id/disconnect"
        android:onClick="disconnectCallback"
        android:layout_below="@+id/notifications_from_profile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <View style="@style/Divider"
        android:id="@+id/divider1"
        android:layout_below="@+id/profile_picture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/theBigChapter_profile"
        android:textColor="@color/boldGray"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/global_challenge"
        android:layout_below="@+id/divider1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.example.bsaraci.blitzone.HLV.HorizontalListView
        android:id="@+id/hlvProfile"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@android:color/transparent"
        android:divider="#E0E0E0"
        android:fadingEdgeLength="10dp"
        android:requiresFadingEdge="horizontal"
        android:layout_gravity="center"
        android:layout_below="@+id/global_challenge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>